integrated tokens from halyk epay
